@@ -110,7 +110,7 @@ public class TopicCommandTest {
 
     @Test
     public void testIsNotUnderReplicatedWhenAdding() {
-        List<Integer> replicaIds = Arrays.asList(1, 2);
+        List<Integer> replicaIds = List.of(1, 2);
         List<Node> replicas = new ArrayList<>();
         for (int id : replicaIds) {
             replicas.add(new Node(id, "localhost", 9090 + id));
@@ -118,9 +118,9 @@ public class TopicCommandTest {
 
         TopicCommand.PartitionDescription partitionDescription = new TopicCommand.PartitionDescription("test-topic",
                 new TopicPartitionInfo(0, new Node(1, "localhost", 9091), replicas,
-                        Collections.singletonList(new Node(1, "localhost", 9091))),
+                        List.of(new Node(1, "localhost", 9091))),
                 null, false,
-                new PartitionReassignment(replicaIds, Arrays.asList(2), Collections.emptyList())
+                new PartitionReassignment(replicaIds, List.of(2), List.of())
         );
 
         assertFalse(partitionDescription.isUnderReplicated());
@@ -236,9 +236,9 @@ public class TopicCommandTest {
     public void testParseAssignment() {
         Map<Integer, List<Integer>> actualAssignment = TopicCommand.parseReplicaAssignment("5:4,3:2,1:0");
         Map<Integer, List<Integer>>  expectedAssignment = new HashMap<>();
-        expectedAssignment.put(0,  Arrays.asList(5, 4));
-        expectedAssignment.put(1, Arrays.asList(3, 2));
-        expectedAssignment.put(2, Arrays.asList(1, 0));
+        expectedAssignment.put(0, List.of(5, 4));
+        expectedAssignment.put(1, List.of(3, 2));
+        expectedAssignment.put(2, List.of(1, 0));
         assertEquals(expectedAssignment, actualAssignment);
     }
 
@@ -257,7 +257,7 @@ public class TopicCommandTest {
             })));
 
         NewTopic expectedNewTopic = new NewTopic(topicName, Optional.empty(), Optional.empty())
-                .configs(Collections.emptyMap());
+                .configs(Map.of());
 
         verify(adminClient, times(1)).createTopics(
                 eq(Set.of(expectedNewTopic)),
@@ -285,7 +285,7 @@ public class TopicCommandTest {
         assertInstanceOf(ThrottlingQuotaExceededException.class, exception.getCause());
 
         verify(adminClient).deleteTopics(
-                argThat((Collection<String> topics) -> topics.equals(Arrays.asList(topicName))),
+                argThat((Collection<String> topics) -> topics.equals(List.of(topicName))),
                 argThat((DeleteTopicsOptions options) -> !options.shouldRetryOnQuotaViolation()));
     }
 
@@ -298,9 +298,9 @@ public class TopicCommandTest {
         when(adminClient.listTopics(any())).thenReturn(listResult);
 
         TopicPartitionInfo topicPartitionInfo = new TopicPartitionInfo(0, new Node(0, "", 0),
-                Collections.emptyList(), Collections.emptyList());
+                List.of(), List.of());
         DescribeTopicsResult describeResult = AdminClientTestUtils.describeTopicsResult(topicName,
-                new TopicDescription(topicName, false, Collections.singletonList(topicPartitionInfo)));
+                new TopicDescription(topicName, false, List.of(topicPartitionInfo)));
         when(adminClient.describeTopics(anyCollection())).thenReturn(describeResult);
 
         CreatePartitionsResult result = AdminClientTestUtils.createPartitionsResult(topicName, Errors.THROTTLING_QUOTA_EXCEEDED.exception());
@@ -365,7 +365,7 @@ public class TopicCommandTest {
         rackInfo.put(4, infoPerBroker5);
         rackInfo.put(5, infoPerBroker6);
 
-        return Collections.singletonList(ClusterConfig.defaultBuilder()
+        return List.of(ClusterConfig.defaultBuilder()
                 .setBrokers(6)
                 .setServerProperties(serverProp)
                 .setPerServerProperties(rackInfo)
@@ -385,13 +385,13 @@ public class TopicCommandTest {
         String testTopicName = TestUtils.randomString(10);
 
         try (Admin adminClient = clusterInstance.admin()) {
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
 
             clusterInstance.waitTopicCreation(testTopicName, defaultNumPartitions);
             Assertions.assertTrue(adminClient.listTopics().names().get().contains(testTopicName),
                     "Admin client didn't see the created topic. It saw: " + adminClient.listTopics().names().get());
 
-            adminClient.deleteTopics(Collections.singletonList(testTopicName));
+            adminClient.deleteTopics(List.of(testTopicName));
             clusterInstance.waitTopicDeletion(testTopicName);
             Assertions.assertTrue(adminClient.listTopics().names().get().isEmpty(),
                     "Admin client see the created topic. It saw: " + adminClient.listTopics().names().get());
@@ -409,14 +409,14 @@ public class TopicCommandTest {
         String testTopicName = TestUtils.randomString(10);
 
         try (Admin adminClient = clusterInstance.admin()) {
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
 
             clusterInstance.waitTopicCreation(testTopicName, defaultNumPartitions);
             Assertions.assertTrue(adminClient.listTopics().names().get().contains(testTopicName),
                     "Admin client didn't see the created topic. It saw: " + adminClient.listTopics().names().get());
 
             List<TopicPartitionInfo> partitions = adminClient
-                    .describeTopics(Collections.singletonList(testTopicName))
+                    .describeTopics(List.of(testTopicName))
                     .allTopicNames()
                     .get()
                     .get(testTopicName)
@@ -424,7 +424,7 @@ public class TopicCommandTest {
             Assertions.assertEquals(defaultNumPartitions, partitions.size(), "Unequal partition size: " + partitions.size());
             Assertions.assertEquals(defaultReplicationFactor, (short) partitions.get(0).replicas().size(), "Unequal replication factor: " + partitions.get(0).replicas().size());
 
-            adminClient.deleteTopics(Collections.singletonList(testTopicName));
+            adminClient.deleteTopics(List.of(testTopicName));
             clusterInstance.waitTopicDeletion(testTopicName);
             Assertions.assertTrue(adminClient.listTopics().names().get().isEmpty(),
                     "Admin client see the created topic. It saw: " + adminClient.listTopics().names().get());
@@ -442,10 +442,10 @@ public class TopicCommandTest {
         String testTopicName = TestUtils.randomString(10);
 
         try (Admin adminClient = clusterInstance.admin()) {
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, 2, defaultReplicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, 2, defaultReplicationFactor)));
             clusterInstance.waitTopicCreation(testTopicName, 2);
             List<TopicPartitionInfo>  partitions = adminClient
-                    .describeTopics(Collections.singletonList(testTopicName))
+                    .describeTopics(List.of(testTopicName))
                     .allTopicNames()
                     .get()
                     .get(testTopicName)
@@ -460,10 +460,10 @@ public class TopicCommandTest {
         String testTopicName = TestUtils.randomString(10);
 
         try (Admin adminClient = clusterInstance.admin()) {
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, defaultNumPartitions, (short) 2)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, defaultNumPartitions, (short) 2)));
             clusterInstance.waitTopicCreation(testTopicName, defaultNumPartitions);
             List<TopicPartitionInfo> partitions = adminClient
-                    .describeTopics(Collections.singletonList(testTopicName))
+                    .describeTopics(List.of(testTopicName))
                     .allTopicNames()
                     .get()
                     .get(testTopicName)
@@ -483,11 +483,11 @@ public class TopicCommandTest {
             Map<String, String> topicConfig = new HashMap<>();
             topicConfig.put(TopicConfig.DELETE_RETENTION_MS_CONFIG, "1000");
 
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, 2, (short) 2).configs(topicConfig)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, 2, (short) 2).configs(topicConfig)));
             clusterInstance.waitTopicCreation(testTopicName, 2);
 
 
-            Config configs = adminClient.describeConfigs(Collections.singleton(configResource)).all().get().get(configResource);
+            Config configs = adminClient.describeConfigs(Set.of(configResource)).all().get().get(configResource);
             assertEquals(1000, Integer.valueOf(configs.get("delete.retention.ms").value()),
                     "Config not set correctly: " + configs.get("delete.retention.ms").value());
         }
@@ -502,7 +502,7 @@ public class TopicCommandTest {
                     clusterInstance, "--create", "--partitions", Integer.toString(defaultNumPartitions), "--replication-factor", "1",
                     "--topic", testTopicName);
 
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
             clusterInstance.waitTopicCreation(testTopicName, defaultNumPartitions);
 
             // try to re-create the topic
@@ -516,7 +516,7 @@ public class TopicCommandTest {
         String testTopicName = TestUtils.randomString(10);
         try (Admin adminClient = clusterInstance.admin();
              TopicCommand.TopicService topicService = new TopicCommand.TopicService(adminClient)) {
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
             clusterInstance.waitTopicCreation(testTopicName, defaultNumPartitions);
 
             TopicCommand.TopicCommandOptions createOpts =
@@ -526,7 +526,7 @@ public class TopicCommandTest {
     }
 
     private List<Integer> getPartitionReplicas(List<TopicPartitionInfo> partitions, int partitionNumber) {
-        return partitions.get(partitionNumber).replicas().stream().map(Node::id).collect(Collectors.toList());
+        return partitions.get(partitionNumber).replicas().stream().map(Node::id).toList();
     }
 
     @ClusterTemplate("generate")
@@ -535,15 +535,15 @@ public class TopicCommandTest {
         try (Admin adminClient = clusterInstance.admin()) {
             String testTopicName = TestUtils.randomString(10);
 
-            replicaAssignmentMap.put(0, Arrays.asList(5, 4));
-            replicaAssignmentMap.put(1, Arrays.asList(3, 2));
-            replicaAssignmentMap.put(2, Arrays.asList(1, 0));
+            replicaAssignmentMap.put(0, List.of(5, 4));
+            replicaAssignmentMap.put(1, List.of(3, 2));
+            replicaAssignmentMap.put(2, List.of(1, 0));
 
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, replicaAssignmentMap)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, replicaAssignmentMap)));
             clusterInstance.waitTopicCreation(testTopicName, 3);
 
             List<TopicPartitionInfo> partitions = adminClient
-                    .describeTopics(Collections.singletonList(testTopicName))
+                    .describeTopics(List.of(testTopicName))
                     .allTopicNames()
                     .get()
                     .get(testTopicName)
@@ -551,11 +551,11 @@ public class TopicCommandTest {
 
             assertEquals(3, partitions.size(),
                     "Unequal partition size: " + partitions.size());
-            assertEquals(Arrays.asList(5, 4), getPartitionReplicas(partitions, 0),
+            assertEquals(List.of(5, 4), getPartitionReplicas(partitions, 0),
                     "Unexpected replica assignment: " + getPartitionReplicas(partitions, 0));
-            assertEquals(Arrays.asList(3, 2), getPartitionReplicas(partitions, 1),
+            assertEquals(List.of(3, 2), getPartitionReplicas(partitions, 1),
                     "Unexpected replica assignment: " + getPartitionReplicas(partitions, 1));
-            assertEquals(Arrays.asList(1, 0), getPartitionReplicas(partitions, 2),
+            assertEquals(List.of(1, 0), getPartitionReplicas(partitions, 2),
                     "Unexpected replica assignment: " + getPartitionReplicas(partitions, 2));
         }
     }
@@ -610,7 +610,7 @@ public class TopicCommandTest {
     public void testListTopics(ClusterInstance clusterInstance) throws InterruptedException {
         String testTopicName = TestUtils.randomString(10);
         try (Admin adminClient = clusterInstance.admin()) {
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
             clusterInstance.waitTopicCreation(testTopicName, defaultNumPartitions);
 
             String output = captureListTopicStandardOut(clusterInstance, buildTopicCommandOptionsWithBootstrap(clusterInstance, "--list"));
@@ -626,9 +626,9 @@ public class TopicCommandTest {
             String topic3 = "oooof.testTopic1";
             int partition = 2;
             short replicationFactor = 2;
-            adminClient.createTopics(Collections.singletonList(new NewTopic(topic1, partition, replicationFactor)));
-            adminClient.createTopics(Collections.singletonList(new NewTopic(topic2, partition, replicationFactor)));
-            adminClient.createTopics(Collections.singletonList(new NewTopic(topic3, partition, replicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(topic1, partition, replicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(topic2, partition, replicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(topic3, partition, replicationFactor)));
             clusterInstance.waitTopicCreation(topic1, partition);
             clusterInstance.waitTopicCreation(topic2, partition);
             clusterInstance.waitTopicCreation(topic3, partition);
@@ -647,7 +647,7 @@ public class TopicCommandTest {
             String hiddenConsumerTopic = Topic.GROUP_METADATA_TOPIC_NAME;
             int partition = 2;
             short replicationFactor = 2;
-            adminClient.createTopics(Collections.singletonList(new NewTopic(topic1, partition, replicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(topic1, partition, replicationFactor)));
             clusterInstance.waitTopicCreation(topic1, partition);
 
             String output = captureListTopicStandardOut(clusterInstance, buildTopicCommandOptionsWithBootstrap(clusterInstance, "--list", "--exclude-internal"));
@@ -663,7 +663,7 @@ public class TopicCommandTest {
              TopicCommand.TopicService topicService = new TopicCommand.TopicService(adminClient)) {
             int partition = 2;
             short replicationFactor = 2;
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, partition, replicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, partition, replicationFactor)));
             clusterInstance.waitTopicCreation(testTopicName, partition);
             topicService.alterTopic(buildTopicCommandOptionsWithBootstrap(clusterInstance, "--alter", "--topic", testTopicName, "--partitions", "3"));
 
@@ -676,7 +676,7 @@ public class TopicCommandTest {
                     () -> clusterInstance.brokers().values().stream().allMatch(
                             b -> b.metadataCache().numPartitions(testTopicName).orElse(0) == 3),
                     TestUtils.DEFAULT_MAX_WAIT_MS, "Timeout waiting for new assignment propagating to broker");
-            TopicDescription topicDescription = adminClient.describeTopics(Collections.singletonList(testTopicName)).topicNameValues().get(testTopicName).get();
+            TopicDescription topicDescription = adminClient.describeTopics(List.of(testTopicName)).topicNameValues().get(testTopicName).get();
             assertEquals(3, topicDescription.partitions().size(), "Expected partition count to be 3. Got: " + topicDescription.partitions().size());
         }
     }
@@ -689,7 +689,7 @@ public class TopicCommandTest {
             int partition = 2;
             short replicationFactor = 2;
 
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, partition, replicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, partition, replicationFactor)));
             clusterInstance.waitTopicCreation(testTopicName, partition);
 
             topicService.alterTopic(buildTopicCommandOptionsWithBootstrap(clusterInstance, "--alter",
@@ -705,10 +705,10 @@ public class TopicCommandTest {
                             b -> b.metadataCache().numPartitions(testTopicName).orElse(0) == 3),
                     TestUtils.DEFAULT_MAX_WAIT_MS, "Timeout waiting for new assignment propagating to broker");
 
-            TopicDescription topicDescription = adminClient.describeTopics(Collections.singletonList(testTopicName)).topicNameValues().get(testTopicName).get();
+            TopicDescription topicDescription = adminClient.describeTopics(List.of(testTopicName)).topicNameValues().get(testTopicName).get();
             assertEquals(3, topicDescription.partitions().size(), "Expected partition count to be 3. Got: " + topicDescription.partitions().size());
             List<Integer> partitionReplicas = getPartitionReplicas(topicDescription.partitions(), 2);
-            assertEquals(Arrays.asList(4, 2), partitionReplicas, "Expected to have replicas 4,2. Got: " + partitionReplicas);
+            assertEquals(List.of(4, 2), partitionReplicas, "Expected to have replicas 4,2. Got: " + partitionReplicas);
 
         }
     }
@@ -721,7 +721,7 @@ public class TopicCommandTest {
 
             int partition = 2;
             short replicationFactor = 2;
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, partition, replicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, partition, replicationFactor)));
             clusterInstance.waitTopicCreation(testTopicName, partition);
 
             assertThrows(ExecutionException.class,
@@ -739,7 +739,7 @@ public class TopicCommandTest {
              TopicCommand.TopicService topicService = new TopicCommand.TopicService(adminClient)) {
             int partition = 2;
             short replicationFactor = 2;
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, partition, replicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, partition, replicationFactor)));
             clusterInstance.waitTopicCreation(testTopicName, partition);
 
             assertThrows(ExecutionException.class,
@@ -756,7 +756,7 @@ public class TopicCommandTest {
 
         try (Admin adminClient = clusterInstance.admin();
              TopicCommand.TopicService topicService = new TopicCommand.TopicService(adminClient)) {
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
             clusterInstance.waitTopicCreation(testTopicName, defaultNumPartitions);
 
             assertThrows(ExecutionException.class,
@@ -805,15 +805,15 @@ public class TopicCommandTest {
 
             int numPartitions = 18;
             int replicationFactor = 3;
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, numPartitions, (short) replicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, numPartitions, (short) replicationFactor)));
             clusterInstance.waitTopicCreation(testTopicName, numPartitions);
 
-            Map<Integer, List<Integer>> assignment = adminClient.describeTopics(Collections.singletonList(testTopicName))
+            Map<Integer, List<Integer>> assignment = adminClient.describeTopics(List.of(testTopicName))
                     .allTopicNames().get().get(testTopicName).partitions()
                     .stream()
                     .collect(Collectors.toMap(
-                            info -> info.partition(),
-                            info -> info.replicas().stream().map(Node::id).collect(Collectors.toList())));
+                        TopicPartitionInfo::partition,
+                        info -> info.replicas().stream().map(Node::id).toList()));
             checkReplicaDistribution(assignment, rackInfo, rackInfo.size(), numPartitions,
                     replicationFactor, true, true, true);
 
@@ -832,9 +832,9 @@ public class TopicCommandTest {
                     () -> clusterInstance.brokers().values().stream().allMatch(p -> p.metadataCache().numPartitions(testTopicName).orElse(0) == alteredNumPartitions),
                     TestUtils.DEFAULT_MAX_WAIT_MS, "Timeout waiting for new assignment propagating to broker");
 
-            assignment = adminClient.describeTopics(Collections.singletonList(testTopicName))
+            assignment = adminClient.describeTopics(List.of(testTopicName))
                     .allTopicNames().get().get(testTopicName).partitions().stream()
-                    .collect(Collectors.toMap(info -> info.partition(), info -> info.replicas().stream().map(Node::id).collect(Collectors.toList())));
+                    .collect(Collectors.toMap(TopicPartitionInfo::partition, info -> info.replicas().stream().map(Node::id).toList()));
             checkReplicaDistribution(assignment, rackInfo, rackInfo.size(), alteredNumPartitions, replicationFactor,
                     true, true, true);
 
@@ -850,11 +850,11 @@ public class TopicCommandTest {
             String cleanUpPolicy = "compact";
             HashMap<String, String> topicConfig = new HashMap<>();
             topicConfig.put(TopicConfig.CLEANUP_POLICY_CONFIG, cleanUpPolicy);
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor).configs(topicConfig)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor).configs(topicConfig)));
             clusterInstance.waitTopicCreation(testTopicName, defaultNumPartitions);
 
             ConfigResource configResource = new ConfigResource(ConfigResource.Type.TOPIC, testTopicName);
-            Config props = adminClient.describeConfigs(Collections.singleton(configResource)).all().get().get(configResource);
+            Config props = adminClient.describeConfigs(Set.of(configResource)).all().get().get(configResource);
             assertNotNull(props.get(TopicConfig.CLEANUP_POLICY_CONFIG), "Properties after creation don't contain " + cleanUpPolicy);
             assertEquals(cleanUpPolicy, props.get(TopicConfig.CLEANUP_POLICY_CONFIG).value(), "Properties after creation have incorrect value");
 
@@ -868,7 +868,7 @@ public class TopicCommandTest {
                     () -> clusterInstance.brokers().values().stream().allMatch(p -> p.metadataCache().numPartitions(testTopicName).orElse(0) == numPartitionsModified),
                     TestUtils.DEFAULT_MAX_WAIT_MS, "Timeout waiting for new assignment propagating to broker");
 
-            Config newProps = adminClient.describeConfigs(Collections.singleton(configResource)).all().get().get(configResource);
+            Config newProps = adminClient.describeConfigs(Set.of(configResource)).all().get().get(configResource);
             assertNotNull(newProps.get(TopicConfig.CLEANUP_POLICY_CONFIG), "Updated properties do not contain " + TopicConfig.CLEANUP_POLICY_CONFIG);
             assertEquals(cleanUpPolicy, newProps.get(TopicConfig.CLEANUP_POLICY_CONFIG).value(), "Updated properties have incorrect value");
 
@@ -887,7 +887,7 @@ public class TopicCommandTest {
              TopicCommand.TopicService topicService = new TopicCommand.TopicService(adminClient)) {
             String testTopicName = TestUtils.randomString(10);
 
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
             clusterInstance.waitTopicCreation(testTopicName, defaultNumPartitions);
 
             // delete the NormalTopic
@@ -913,7 +913,7 @@ public class TopicCommandTest {
              TopicCommand.TopicService topicService = new TopicCommand.TopicService(adminClient)) {
             // create the topic with colliding chars
             String topicWithCollidingChar = "test.a";
-            adminClient.createTopics(Collections.singletonList(new NewTopic(topicWithCollidingChar, defaultNumPartitions, defaultReplicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(topicWithCollidingChar, defaultNumPartitions, defaultReplicationFactor)));
             clusterInstance.waitTopicCreation(topicWithCollidingChar, defaultNumPartitions);
 
             // delete the topic
@@ -927,7 +927,7 @@ public class TopicCommandTest {
             clusterInstance.waitTopicDeletion(topicWithCollidingChar);
 
             // recreate same topic
-            adminClient.createTopics(Collections.singletonList(new NewTopic(topicWithCollidingChar, defaultNumPartitions, defaultReplicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(topicWithCollidingChar, defaultNumPartitions, defaultReplicationFactor)));
             clusterInstance.waitTopicCreation(topicWithCollidingChar, defaultNumPartitions);
         }
     }
@@ -944,7 +944,7 @@ public class TopicCommandTest {
              TopicCommand.TopicService topicService = new TopicCommand.TopicService(adminClient)) {
 
             // create the offset topic
-            adminClient.createTopics(Collections.singletonList(new NewTopic(Topic.GROUP_METADATA_TOPIC_NAME, defaultNumPartitions, defaultReplicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(Topic.GROUP_METADATA_TOPIC_NAME, defaultNumPartitions, defaultReplicationFactor)));
             clusterInstance.waitTopicCreation(Topic.GROUP_METADATA_TOPIC_NAME, defaultNumPartitions);
 
             // Try to delete the Topic.GROUP_METADATA_TOPIC_NAME which is allowed by default.
@@ -1001,7 +1001,7 @@ public class TopicCommandTest {
         try (Admin adminClient = clusterInstance.admin()) {
             int partition = 2;
             short replicationFactor = 2;
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, partition, replicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, partition, replicationFactor)));
             clusterInstance.waitTopicCreation(testTopicName, partition);
 
             String output = captureDescribeTopicStandardOut(clusterInstance, buildTopicCommandOptionsWithBootstrap(clusterInstance, "--describe", "--topic", testTopicName));
@@ -1075,7 +1075,7 @@ public class TopicCommandTest {
             int partitions = 3;
             short replicationFactor = 1;
 
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, partitions, replicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, partitions, replicationFactor)));
             clusterInstance.waitTopicCreation(testTopicName, partitions);
 
             // check which partition is on broker 0 which we'll kill
@@ -1102,11 +1102,11 @@ public class TopicCommandTest {
         try (Admin adminClient = clusterInstance.admin()) {
             int partitions = 1;
             short replicationFactor = 3;
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, partitions, replicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, partitions, replicationFactor)));
             clusterInstance.waitTopicCreation(testTopicName, partitions);
 
             clusterInstance.shutdownBroker(0);
-            Assertions.assertEquals(clusterInstance.aliveBrokers().size(), 2);
+            Assertions.assertEquals(2, clusterInstance.aliveBrokers().size());
 
             TestUtils.waitForCondition(
                     () -> clusterInstance.aliveBrokers().values().stream().allMatch(
@@ -1133,7 +1133,7 @@ public class TopicCommandTest {
             topicConfig.put(TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG, "3");
             int partitions = 1;
             short replicationFactor = 3;
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, partitions, replicationFactor).configs(topicConfig)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, partitions, replicationFactor).configs(topicConfig)));
             clusterInstance.waitTopicCreation(testTopicName, partitions);
 
             clusterInstance.shutdownBroker(0);
@@ -1157,7 +1157,7 @@ public class TopicCommandTest {
 
         try (Admin adminClient = clusterInstance.admin();
              KafkaProducer<String, String> producer = createProducer(clusterInstance)) {
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
             clusterInstance.waitTopicCreation(testTopicName, defaultNumPartitions);
 
             TopicPartition tp = new TopicPartition(testTopicName, 0);
@@ -1170,22 +1170,22 @@ public class TopicCommandTest {
             // throughput so the reassignment doesn't complete quickly.
             List<Integer> brokerIds = new ArrayList<>(clusterInstance.brokerIds());
 
-            ToolsTestUtils.setReplicationThrottleForPartitions(adminClient, brokerIds, Collections.singleton(tp), 1);
+            ToolsTestUtils.setReplicationThrottleForPartitions(adminClient, brokerIds, Set.of(tp), 1);
 
-            TopicDescription testTopicDesc = adminClient.describeTopics(Collections.singleton(testTopicName)).allTopicNames().get().get(testTopicName);
+            TopicDescription testTopicDesc = adminClient.describeTopics(Set.of(testTopicName)).allTopicNames().get().get(testTopicName);
             TopicPartitionInfo firstPartition = testTopicDesc.partitions().get(0);
 
-            List<Integer> replicasOfFirstPartition = firstPartition.replicas().stream().map(Node::id).collect(Collectors.toList());
+            List<Integer> replicasOfFirstPartition = firstPartition.replicas().stream().map(Node::id).toList();
             List<Integer> replicasDiff = new ArrayList<>(brokerIds);
             replicasDiff.removeAll(replicasOfFirstPartition);
             Integer targetReplica = replicasDiff.get(0);
 
-            adminClient.alterPartitionReassignments(Collections.singletonMap(tp,
-                    Optional.of(new NewPartitionReassignment(Collections.singletonList(targetReplica))))).all().get();
+            adminClient.alterPartitionReassignments(Map.of(tp,
+                    Optional.of(new NewPartitionReassignment(List.of(targetReplica))))).all().get();
 
             // let's wait until the LAIR is propagated
             TestUtils.waitForCondition(
-                    () -> !adminClient.listPartitionReassignments(Collections.singleton(tp)).reassignments().get()
+                    () -> !adminClient.listPartitionReassignments(Set.of(tp)).reassignments().get()
                                     .get(tp).addingReplicas().isEmpty(), CLUSTER_WAIT_MS, "Reassignment didn't add the second node"
             );
 
@@ -1208,7 +1208,7 @@ public class TopicCommandTest {
 
             TestUtils.waitForCondition(
                     () -> {
-                        PartitionReassignment tempReassignments = adminClient.listPartitionReassignments(Collections.singleton(tp)).reassignments().get().get(tp);
+                        PartitionReassignment tempReassignments = adminClient.listPartitionReassignments(Set.of(tp)).reassignments().get().get(tp);
                         reassignmentsRef.set(tempReassignments);
                         return reassignmentsRef.get() != null;
                     }, waitTimeMs, "Reassignments did not become non-null within the specified time"
@@ -1216,7 +1216,7 @@ public class TopicCommandTest {
 
             assertFalse(reassignmentsRef.get().addingReplicas().isEmpty());
 
-            ToolsTestUtils.removeReplicationThrottleForPartitions(adminClient, brokerIds, Collections.singleton(tp));
+            ToolsTestUtils.removeReplicationThrottleForPartitions(adminClient, brokerIds, Set.of(tp));
             TestUtils.waitForCondition(
                     () -> adminClient.listPartitionReassignments().reassignments().get().isEmpty(),
                     CLUSTER_WAIT_MS,  String.format("reassignmet not finished after %s ms", CLUSTER_WAIT_MS)
@@ -1235,7 +1235,7 @@ public class TopicCommandTest {
             int partitions = 1;
             short replicationFactor = 6;
 
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, partitions, replicationFactor).configs(topicConfig)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, partitions, replicationFactor).configs(topicConfig)));
             clusterInstance.waitTopicCreation(testTopicName, partitions);
 
             clusterInstance.shutdownBroker(0);
@@ -1278,10 +1278,10 @@ public class TopicCommandTest {
             List<NewTopic> newTopics = new ArrayList<>();
 
             Map<Integer, List<Integer>> fullyReplicatedReplicaAssignmentMap = new HashMap<>();
-            fullyReplicatedReplicaAssignmentMap.put(0, Arrays.asList(1, 2, 3));
+            fullyReplicatedReplicaAssignmentMap.put(0, List.of(1, 2, 3));
 
             Map<Integer, List<Integer>> offlineReplicaAssignmentMap = new HashMap<>();
-            offlineReplicaAssignmentMap.put(0, Arrays.asList(0));
+            offlineReplicaAssignmentMap.put(0, List.of(0));
 
             Map<String, String> topicConfig = new HashMap<>();
             topicConfig.put(TopicConfig.MIN_IN_SYNC_REPLICAS_CONFIG, "6");
@@ -1333,7 +1333,7 @@ public class TopicCommandTest {
             int partitions = 2;
             short replicationFactor = 2;
 
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, partitions, replicationFactor).configs(topicConfig)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, partitions, replicationFactor).configs(topicConfig)));
             clusterInstance.waitTopicCreation(testTopicName, partitions);
 
             String output = captureDescribeTopicStandardOut(clusterInstance, buildTopicCommandOptionsWithBootstrap(clusterInstance, "--describe"));
@@ -1345,7 +1345,7 @@ public class TopicCommandTest {
     public void testDescribeAndListTopicsWithoutInternalTopics(ClusterInstance clusterInstance) throws InterruptedException {
         String testTopicName = TestUtils.randomString(10);
         try (Admin adminClient = clusterInstance.admin()) {
-            adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
             clusterInstance.waitTopicCreation(testTopicName, defaultNumPartitions);
 
             // test describe
@@ -1374,9 +1374,9 @@ public class TopicCommandTest {
                 new ClusterAuthorizationException("Unauthorized"));
 
         doReturn(result).when(adminClient).listPartitionReassignments(
-                Collections.singleton(new TopicPartition(testTopicName, 0))
+                Set.of(new TopicPartition(testTopicName, 0))
         );
-        adminClient.createTopics(Collections.singletonList(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
+        adminClient.createTopics(List.of(new NewTopic(testTopicName, defaultNumPartitions, defaultReplicationFactor)));
         clusterInstance.waitTopicCreation(testTopicName, defaultNumPartitions);
 
         String output = captureDescribeTopicStandardOut(clusterInstance, buildTopicCommandOptionsWithBootstrap(clusterInstance, "--describe", "--topic", testTopicName));
@@ -1395,7 +1395,7 @@ public class TopicCommandTest {
             String topic = "foo_bar";
             int partitions = 1;
             short replicationFactor = 3;
-            adminClient.createTopics(Collections.singletonList(new NewTopic(topic, partitions, replicationFactor)));
+            adminClient.createTopics(List.of(new NewTopic(topic, partitions, replicationFactor)));
             clusterInstance.waitTopicCreation(topic, defaultNumPartitions);
 
             assertThrows(TopicExistsException.class,
@@ -1444,7 +1444,7 @@ public class TopicCommandTest {
 
             List<Integer> partitionRackMapValueSize = partitionRackMap.values().stream()
                     .map(value -> (int) value.stream().distinct().count())
-                    .collect(Collectors.toList());
+                    .toList();
 
             List<Integer> expected = Collections.nCopies(numPartitions, replicationFactor);
             assertEquals(expected, partitionRackMapValueSize, "More than one replica of the same partition is assigned to the same rack");
@@ -1502,9 +1502,9 @@ public class TopicCommandTest {
                 String rack;
                 if (brokerRackMapping.containsKey(brokerId)) {
                     rack = brokerRackMapping.get(brokerId);
-                    List<String> partitionRackValues = Stream.of(Collections.singletonList(rack), partitionRackMap.getOrDefault(partitionId, Collections.emptyList()))
+                    List<String> partitionRackValues = Stream.of(List.of(rack), partitionRackMap.getOrDefault(partitionId, List.of()))
                             .flatMap(List::stream)
-                            .collect(Collectors.toList());
+                            .toList();
                     partitionRackMap.put(partitionId, partitionRackValues);
                 } else {
                     System.err.printf("No mapping found for %s in `brokerRackMapping`%n", brokerId);
@@ -1514,18 +1514,9 @@ public class TopicCommandTest {
         return new ReplicaDistributions(partitionRackMap, leaderCount, partitionCount);
     }
 
-    private static class ReplicaDistributions {
-        private final Map<Integer, List<String>>  partitionRacks;
-        private final Map<Integer, Integer> brokerLeaderCount;
-        private final Map<Integer, Integer> brokerReplicasCount;
-
-        public ReplicaDistributions(Map<Integer, List<String>> partitionRacks,
-                                    Map<Integer, Integer> brokerLeaderCount,
-                                    Map<Integer, Integer> brokerReplicasCount) {
-            this.partitionRacks = partitionRacks;
-            this.brokerLeaderCount = brokerLeaderCount;
-            this.brokerReplicasCount = brokerReplicasCount;
-        }
+    private record ReplicaDistributions(Map<Integer, List<String>> partitionRacks,
+                                        Map<Integer, Integer> brokerLeaderCount,
+                                        Map<Integer, Integer> brokerReplicasCount) {
     }
 
     private KafkaProducer<String, String> createProducer(ClusterInstance clusterInstance) {
