@@ -26,7 +26,6 @@ import org.junit.jupiter.api.Test;
 
 import java.io.File;
 import java.io.IOException;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Properties;
@@ -283,7 +282,7 @@ public class ConsoleConsumerOptionsTest {
         });
 
         // different in all three places
-        File propsFile = ToolsTestUtils.tempPropertiesFile(Collections.singletonMap("group.id", "group-from-file"));
+        File propsFile = ToolsTestUtils.tempPropertiesFile(Map.of("group.id", "group-from-file"));
         final String[] args = new String[]{
             "--bootstrap-server", "localhost:9092",
             "--topic", "test",
@@ -295,7 +294,7 @@ public class ConsoleConsumerOptionsTest {
         assertThrows(IllegalArgumentException.class, () -> new ConsoleConsumerOptions(args));
 
         // the same in all three places
-        propsFile = ToolsTestUtils.tempPropertiesFile(Collections.singletonMap("group.id", "test-group"));
+        propsFile = ToolsTestUtils.tempPropertiesFile(Map.of("group.id", "test-group"));
         final String[] args1 = new String[]{
             "--bootstrap-server", "localhost:9092",
             "--topic", "test",
@@ -309,7 +308,7 @@ public class ConsoleConsumerOptionsTest {
         assertEquals("test-group", props.getProperty("group.id"));
 
         // different via --consumer-property and --consumer.config
-        propsFile = ToolsTestUtils.tempPropertiesFile(Collections.singletonMap("group.id", "group-from-file"));
+        propsFile = ToolsTestUtils.tempPropertiesFile(Map.of("group.id", "group-from-file"));
         final String[] args2 = new String[]{
             "--bootstrap-server", "localhost:9092",
             "--topic", "test",
@@ -330,7 +329,7 @@ public class ConsoleConsumerOptionsTest {
         assertThrows(IllegalArgumentException.class, () -> new ConsoleConsumerOptions(args3));
 
         // different via --group and --consumer.config
-        propsFile = ToolsTestUtils.tempPropertiesFile(Collections.singletonMap("group.id", "group-from-file"));
+        propsFile = ToolsTestUtils.tempPropertiesFile(Map.of("group.id", "group-from-file"));
         final String[] args4 = new String[]{
             "--bootstrap-server", "localhost:9092",
             "--topic", "test",
